2010-03-13 michaudm <michael.michaud@free.fr>
    Geometry Function Polygonize now returns Polygon or MultiPolygon
    instead of GeometryCollection

2010-03-13 michaudm <michael.michaud@free.fr>
    Fix a bug in com.vividsolutions.jump.workbench.ui.EditTransaction
    Point(null,null,0) in deleteFeature method throwed exception with JTS-1.11
    replaced by an empty GeometryCollection

2010-03-04 sstein  <sstein@geo.uzh.ch>
	added Sextante Raster interface classes, so we can process rasters now in OJ
	
2010-03-04 sstein  <sstein@geo.uzh.ch>
	added JTS 1.11
	changed Maven pom script
	
2010-02-12 beckerl <becker.larry@gmail.com>
	Scalebar can now be modified with BeanShellScripts since getters/setters have been added.
	jump.workbench.ui.plugin.scalebar.ScaleBarRenderer
	
2010-02-12 beckerl <becker.larry@gmail.com>
	Added optimization to stop drawing while loading layers.  
	This significantly speeds up loading of large tasks. 
	core.ui.plugin.file.open.OpenProjectWizard
	
2010-02-04 beckerl <becker.larry@gmail.com>
	OJ now remembers the window location, size, and maximized state in 
	the workbench-state.xml file and the project files (improved until 10 Feb 2010)
    jump.workbench.JUMPWorkbench
    jump.workbench.ui.WorkbenchFrame
    jump.workbench.ui.plugin.AbstractSaveProjectPlugin
    jump.workbench.model.Task
    jump.workbench.model.Task.java2xml
    jump.util.java2xml.XML2Java
	core.ui.plugin.file.open.OpenProjectWizard
    
2010-02-03 beckerl <becker.larry@gmail.com>
    core.ui.zoom.AbstractZoomTool
    core.ui.plugin.tools.ZoomRealtimeTool (2 Feb 2010)
    mouse wheel image stretch modification, which delays request of 
    data after 0.7 seconds of mouse wheel operation

2010-01-30 michaudm <michael.michaud@free.fr>
    * com.vividsolutions.jump.datastore.jdbc.ValueConverterFactory
    now converts SQL NULL to java null for Integer and Double
    and DATE to Date (only TimeStamp were converted to Date before)